// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header render with children: non-empty children 1`] = `
<DocumentFragment>
  <header
    class="launchPanelHeader"
  >
    <h1
      class="title"
    >
      test-title
    </h1>
    <div
      class="children"
    >
      <span>
        test children
      </span>
    </div>
    <div
      class="subtitle"
    />
  </header>
</DocumentFragment>
`;

exports[`Header render with children: null children 1`] = `
<DocumentFragment>
  <header
    class="launchPanelHeader"
  >
    <h1
      class="title"
    >
      test-title
    </h1>
    <div
      class="children"
    />
    <div
      class="subtitle"
    />
  </header>
</DocumentFragment>
`;

exports[`Header render with subtitle <test-sub-title> 1`] = `
<DocumentFragment>
  <header
    class="launchPanelHeader"
  >
    <h1
      class="title"
    >
      test-title
    </h1>
    <div
      class="children"
    />
    <div
      class="subtitle"
    >
      test-sub-title
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header render with subtitle <undefined> 1`] = `
<DocumentFragment>
  <header
    class="launchPanelHeader"
  >
    <h1
      class="title"
    >
      test-title
    </h1>
    <div
      class="children"
    />
    <div
      class="subtitle"
    />
  </header>
</DocumentFragment>
`;
